test/parser/if.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn main(): unit {
    // CHECK: [[# @LINE + 1 ]]:8: error: expected expression
    if {}

    // CHECK: [[# @LINE + 1 ]]:12: error: expected 'if' body
    if 0.0 #{}

    if 0.0 {}
    // CHECK: [[# @LINE + 1 ]]:10: error: expected 'else' body
    else ({}

    if 0.0 {}
    // CHECK: [[# @LINE + 1 ]]:13: error: expected expression
    else if {}
    // CHECK: [[# @LINE + 1 ]]:5: error: expected expression
    else {}

    if 0.0 {}
    // CHECK: IfStmt
    // CHECK-NEXT:   NumberLiteral: '0.0'
    // CHECK-NEXT:   Block

    if 0.0 {}
    else {}
    // CHECK: IfStmt
    // CHECK-NEXT:   NumberLiteral: '0.0'
    // CHECK-NEXT:   Block
    // CHECK-NEXT:   Block

    if 0.0 {}
    else if 1.0 {}
    else if 2.0 {}
    else {}
    // CHECK: IfStmt
    // CHECK-NEXT:   NumberLiteral: '0.0'
    // CHECK-NEXT:   Block
    // CHECK-NEXT:   Block
    // CHECK-NEXT:     IfStmt
    // CHECK-NEXT:       NumberLiteral: '1.0'
    // CHECK-NEXT:       Block
    // CHECK-NEXT:       Block
    // CHECK-NEXT:         IfStmt
    // CHECK-NEXT:           NumberLiteral: '2.0'
    // CHECK-NEXT:           Block
    // CHECK-NEXT:           Block
}
